--- a/index.html
+++ b/index.html
@@ -1,4 +1,1 @@
-<p>Lorem ipsum dolor sit amet consectetur.
-</p>
-<p>Lorem ipsum dolor sit amet consectetur.
-</p>
+<p>Lorem ipsum dolor sit amet consectetur.</p>
